bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_invalid_first_generic.stderr
error: Invalid pezpallet::storage, for unnamed generic arguments the type first generic argument must be `_`, the argument is then replaced by macro.
  --> tests/pezpallet_ui/storage_invalid_first_generic.rs:36:29
   |
36 |     type Foo<T> = StorageValue<u8, u8>;
   |                                ^^

error: expected `_`
  --> tests/pezpallet_ui/storage_invalid_first_generic.rs:36:29
   |
36 |     type Foo<T> = StorageValue<u8, u8>;
   |                                ^^
